cart page added; fixed issue where second scrollbar would appear along the side of the page; PhoneCard/CartItem components added; hr general style added

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* For Material UI Divider components that are inside of flexboxes */
+hr {
+  align-self: stretch;
+  height: auto;
+}
